To Stage: adding "Implementación de Modulo de Autenticación - Spring Backend" (#2)
* Feat: adding entities and DTOs that are needed for authentication module

* Feat: adding repositories, security config, and utils that are needed for authentication module

* Feat: adding services for authentication module

* Feat: adding swagger config, auth controller and global handler exception

* Fix: adding some fixes

* Feat: adding application properties

* Fix: adding fixes and improving application properties file

* Feat: adding fixes to classes and new pom.xml

* Fix: adding fix in pom.xml

* Fix: adding missing test dependencies

* Fix: improving pom xml

* Fix: adding improvement on SQL DDL script and Trigger definition

* Fix: adding correct port and database name

* Fix: on database username